--- a/css/disciplines-more.css
+++ b/css/disciplines-more.css
@@ -587,7 +587,6 @@
 	box-sizing: border-box;
 	background-repeat: no-repeat;
 	background-position: center;
-	background-image: url('../i/price-back.png');
 	background-size: cover;
 	margin-bottom: 50px;
 	opacity: 0;
@@ -612,16 +611,16 @@
 	transform: translateY(0);
 }
 .b-7-list li.green-li {
-	background-color: rgb(0, 187, 74);
+	background-image: url('../i/price-back-green.jpg');
 }
 .b-7-list li.yellow-li {
-	background-color: rgb(255, 181, 51);
+	background-image: url('../i/price-back-yellow.jpg');
 }
 .b-7-list li.red-li {
-	background-color: rgb(251, 76, 76);
+	background-image: url('../i/price-back-red.jpg');
 }
 .b-7-list li.orange-li {
-	background-color: rgb(246, 82, 46);
+	background-image: url('../i/price-back-orange.jpg');
 }
 .b-7-list .li-name {
 	display: block;
