--- a/css/index.css
+++ b/css/index.css
@@ -64,14 +64,19 @@
 	background-image: url('../i/disciplines-back.jpg');
 }
 .b-1-slider .slick-dots {
-	display: none !important;
+	display: block !important;
 	position: absolute;
 	bottom: 1px;
 	left: 0;
 	width: 100%;
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	-ms-transition: all 0.3s;
+	transition: all 0.3s;
+	opacity: 0 !important;
 }
 .b-1-slider:hover .slick-dots {
-	display: block !important;
+	opacity: 1 !important;
 }
 .b-1-slider .slick-dots li {
 	display: inline-block;
@@ -95,7 +100,7 @@
 	opacity: 1;
 }
 .b-1-slider .slick-arrow {
-	display: none !important;
+	display: block !important;
 	font-size: 0;
 	border: 0;
 	background-color: transparent;
@@ -104,12 +109,17 @@
 	position: absolute;
 	top: calc(50% - 17px);
 	z-index: 1;
+	opacity: 0 !important;
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	-ms-transition: all 0.3s;
+	transition: all 0.3s;
 }
 .b-1-slider .slick-arrow:hover {
 	cursor: pointer;
 }
 .b-1-slider:hover .slick-arrow {
-	display: block !important;
+	opacity: 1 !important;
 }
 .b-1-slider .slick-next {
 	right: 10px;
@@ -857,15 +867,32 @@
 	width: 100%;
 	height: 197px;
 }
-.youtube-top .youtube-a {
+.vk-top, .inst-top {
+	margin-bottom: 30px;
+}
+.youtube-top .youtube-a, .vk-top .vk-a, .inst-top .inst-a {
 	display: block;
 	width: auto;
 	max-width: 100%;
 }
-.youtube-top .youtube-a img {
+.youtube-top .youtube-a img, .vk-top .vk-a img, .inst-top .inst-a img {
 	display: block;
 	margin: 0 auto;
 	max-width: 100%;
+}
+.vk-top .subscribe-a {
+	padding: 13px 70px;
+	color: #ffffff;
+	background-color: rgb(73, 118, 168);
+	border-radius: 10px;
+	font-family: 'SFUI-Medium';
+}
+.inst-top .subscribe-a {
+	padding: 13px 70px;
+	color: #ffffff;
+	background-color: rgb(220, 49, 122);
+	border-radius: 10px;
+	font-family: 'SFUI-Medium';
 }
 .youtube-top .subscribe-a {
 	padding: 13px 70px;
@@ -1009,7 +1036,7 @@
 	.instagram-desktop {
 		display: none;
 	}
-	.youtube-top .subscribe-a {
+	.youtube-top .subscribe-a, .vk-top .subscribe-a, .inst-top .subscribe-a {
 		padding: 13px 40px;
 	}
 	.b-8 .social-list-1 li.li-youtube iframe {
