--- a/css/news.css
+++ b/css/news.css
@@ -95,6 +95,12 @@
 	-ms-transform: translateY(0);
 	transform: translateY(0);
 }*/
+.news-list .abs-img img {
+	display: block;
+	max-width: 100%;
+	max-height: 100%;
+	margin: 0 auto 0 0;
+}
 .news-list .date {
 	display: block;
 	text-align: left;
