--- a/css/disciplines.css
+++ b/css/disciplines.css
@@ -561,15 +561,32 @@
 	width: 100%;
 	height: 197px;
 }
-.youtube-top .youtube-a {
+.vk-top, .inst-top {
+	margin-bottom: 30px;
+}
+.youtube-top .youtube-a, .vk-top .vk-a, .inst-top .inst-a {
 	display: block;
 	width: auto;
 	max-width: 100%;
 }
-.youtube-top .youtube-a img {
+.youtube-top .youtube-a img, .vk-top .vk-a img, .inst-top .inst-a img {
 	display: block;
 	margin: 0 auto;
 	max-width: 100%;
+}
+.vk-top .subscribe-a {
+	padding: 13px 70px;
+	color: #ffffff;
+	background-color: rgb(73, 118, 168);
+	border-radius: 10px;
+	font-family: 'SFUI-Medium';
+}
+.inst-top .subscribe-a {
+	padding: 13px 70px;
+	color: #ffffff;
+	background-color: rgb(220, 49, 122);
+	border-radius: 10px;
+	font-family: 'SFUI-Medium';
 }
 .youtube-top .subscribe-a {
 	padding: 13px 70px;
@@ -679,7 +696,7 @@
 	.instagram-desktop {
 		display: none;
 	}
-	.youtube-top .subscribe-a {
+	.youtube-top .subscribe-a, .vk-top .subscribe-a, .inst-top .subscribe-a {
 		padding: 13px 40px;
 	}
 	.b-5 .social-list-1 li.li-youtube iframe {
