--- a/css/layout.css
+++ b/css/layout.css
@@ -400,8 +400,8 @@ input:-moz-placeholder {
 	display: inline-block;
 	vertical-align: top;
 	margin: 0 5px;
-	width: 25px;
-	height: 25px;
+	width: 18px;
+	height: 18px;
 }
 .header-social li a {
 	display: block;
@@ -430,6 +430,7 @@ input:-moz-placeholder {
 	color: rgb(35, 30, 30);
 	font-size: 21px;
 	font-family: 'SFUI-Medium';
+	margin-right: 12px;
 }
 .header-nav {
 	padding-top: 10px;
@@ -708,7 +709,7 @@ input:-moz-placeholder {
 }
 .cookie-btn:hover {
 	cursor: pointer;
-	/*background-color: #5379aa;*/
+	background-color: rgb(65,68,74);
 }
 
 .popup {
@@ -1075,7 +1076,7 @@ input:-moz-placeholder {
 	}
 	.header {
 		position: fixed;
-		border-bottom: 1px solid #000000;
+		border-bottom: 1px solid #e6e6e6;
 	}
 	.header .b-block {
 		padding-top: 19px;
@@ -1145,6 +1146,9 @@ input:-moz-placeholder {
 	.mobile-menu .header-social {
 		margin: 0 auto 10px;
 		display: block;
+	}
+	.mobile-menu .header-phone {
+		margin-right: auto;
 	}
 	.footer-logo {
 		margin-right: 0;
