--- a/css/disciplines.css
+++ b/css/disciplines.css
@@ -580,6 +580,10 @@
 	background-color: rgb(73, 118, 168);
 	border-radius: 10px;
 	font-family: 'SFUI-Medium';
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	-ms-transition: all 0.3s;
+	transition: all 0.3s;
 }
 .inst-top .subscribe-a {
 	padding: 13px 70px;
@@ -587,6 +591,10 @@
 	background-color: rgb(220, 49, 122);
 	border-radius: 10px;
 	font-family: 'SFUI-Medium';
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	-ms-transition: all 0.3s;
+	transition: all 0.3s;
 }
 .youtube-top .subscribe-a {
 	padding: 13px 70px;
@@ -594,6 +602,19 @@
 	background-color: rgb(230, 55, 59);
 	border-radius: 10px;
 	font-family: 'SFUI-Medium';
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	-ms-transition: all 0.3s;
+	transition: all 0.3s;
+}
+.vk-top .subscribe-a:hover {
+	background-color: rgb(53, 98, 148);
+}
+.inst-top .subscribe-a:hover {
+	background-color: rgb(200, 29, 102);
+}
+.youtube-top .subscribe-a:hover {
+	background-color: rgb(210, 35, 39);
 }
 .instagram-mobile {
 	display: none;
@@ -663,6 +684,9 @@
 		display: block;
 		width: 100% !important;
 		margin: 0 auto 20px;
+	}
+	.b-2 {
+		background-position: 5%;
 	}
 	.b-2-wrap .item {
 		width: 100%;
