--- a/css/contacts.css
+++ b/css/contacts.css
@@ -151,6 +151,10 @@
 	background-color: rgb(73, 118, 168);
 	border-radius: 10px;
 	font-family: 'SFUI-Medium';
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	-ms-transition: all 0.3s;
+	transition: all 0.3s;
 }
 .inst-top .subscribe-a {
 	padding: 13px 70px;
@@ -158,6 +162,10 @@
 	background-color: rgb(220, 49, 122);
 	border-radius: 10px;
 	font-family: 'SFUI-Medium';
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	-ms-transition: all 0.3s;
+	transition: all 0.3s;
 }
 .youtube-top .subscribe-a {
 	padding: 13px 70px;
@@ -165,6 +173,19 @@
 	background-color: rgb(230, 55, 59);
 	border-radius: 10px;
 	font-family: 'SFUI-Medium';
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	-ms-transition: all 0.3s;
+	transition: all 0.3s;
+}
+.vk-top .subscribe-a:hover {
+	background-color: rgb(53, 98, 148);
+}
+.inst-top .subscribe-a:hover {
+	background-color: rgb(200, 29, 102);
+}
+.youtube-top .subscribe-a:hover {
+	background-color: rgb(210, 35, 39);
 }
 .instagram-mobile {
 	display: none;
