--- a/css/treners.css
+++ b/css/treners.css
@@ -42,6 +42,22 @@
 	display: inline-block;
 	width: 100%;
 	margin-bottom: 100px;
+	opacity: 0;
+	-webkit-transition: all 0.5s;
+	-moz-transition: all 0.5s;
+	-ms-transition: all 0.5s;
+	transition: all 0.5s;
+	-webkit-transform: translateY(10px);
+	-moz-transform: translateY(10px);
+	-ms-transform: translateY(10px);
+	transform: translateY(10px);
+}
+.b-2-list li.anim {
+	opacity: 1;
+	-webkit-transform: translateY(0);
+	-moz-transform: translateY(0);
+	-ms-transform: translateY(0);
+	transform: translateY(0);
 }
 .b-2-list li:first-child {
 	margin-top: -66px;
